--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
 
-  lint:
+  test:
     # NOTE: This name appears in GitHub's Checks API.
     name: lint
     runs-on: ubuntu-latest
@@ -39,11 +39,18 @@ jobs:
         if: always()
       - name: Run tests
         run: |
-          pytest
+          pytest --cov=suffix_trees/
         # Always run this step so that all linting errors can be seen at once.
         if: always()
       - name: Generate and run test vectors
         # TODO: could cache the gen_vectors.py result.
         run: |
           python3 suffix_trees/test/gen_vectors.py
-          SUFFIX_TREES_TEST_VECTORS=1 pytest suffix_trees/test/test_vectors.py
+          SUFFIX_TREES_TEST_VECTORS=1 pytest --cov=suffix_trees/ --cov-append suffix_trees/test/test_vectors.py
+      - name: Upload coverage
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: |
+          codecov
+        # Only run matrix if previous jobs are succesful and with Python version 3.8.
+        if: success() && matrix.python-version == 3.8
